# locksys

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  library.properties
doc/: thread_model.md
examples/: main.c
examples/arduino/BootstrapSystem/: BootstrapSystem.ino
examples/arduino/OpenLock/: OpenLock.ino
src/: locksys.c  locksys.h
src/crypto/: crypto.c  crypto.h
src/global/: common.c  common.h  config.h  device_key.generated.h  policy.c  policy.h  user.c  user.h
src/hal/: hal_io.h  hal_storage.h  hal_time.h
src/hal/arduino/: hal_io_arduino.c  hal_storage_arduino.c  hal_time_arduino.c
src/hal/posix/: hal_io_posix.c  hal_storage_posix.c  hal_time_posix.c
src/hal/windows/: hal_io_windows.c  hal_storage_windows.c  hal_time_windows.c
src/logging/: logging.c  logging.h
tests/: test_main.c  test_template.c
tools/: bootstrap_system.c  clean_all.sh  generate_device_key.cmake
